<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/a"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/e"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/i"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/o"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnU"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/u"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@android:color/white" />
    </LinearLayout>
</LinearLayout>