<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:onClick="onClick"
    tools:context=".activity.MainActivity">

    <ImageButton
        android:id="@+id/btnObjetos"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/objetos"
        android:onClick="onClick"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/btnFrutas"
        app:layout_constraintEnd_toStartOf="@+id/txtObjetos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCores"
        app:srcCompat="@drawable/objetos" />

    <ImageButton
        android:id="@+id/btnCores"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cores"
        android:onClick="onClick"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/btnObjetos"
        app:layout_constraintEnd_toStartOf="@+id/txtCores"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTemas"
        app:srcCompat="@drawable/cores" />

    <ImageButton
        android:id="@+id/btnFrutas"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/frutas"
        android:onClick="onClick"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/btnAnimais"
        app:layout_constraintEnd_toStartOf="@+id/txtFrutas"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnObjetos"
        app:srcCompat="@drawable/frutas" />

    <ImageButton
        android:id="@+id/btnPaises"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/paises"
        android:onClick="onClick"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtPaises"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnimais"
        app:srcCompat="@drawable/paises" />

    <ImageButton
        android:id="@+id/btnAnimais"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/animais"
        android:onClick="onClick"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/btnPaises"
        app:layout_constraintEnd_toStartOf="@+id/txtAnimais"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFrutas"
        app:srcCompat="@drawable/animais" />

    <TextView
        android:id="@+id/txtCores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/cores"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/luckiest_guy"
        app:layout_constraintBottom_toBottomOf="@+id/btnCores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCores"
        app:layout_constraintTop_toTopOf="@+id/btnCores" />

    <TextView
        android:id="@+id/txtObjetos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/objetos"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/luckiest_guy"
        app:layout_constraintBottom_toBottomOf="@+id/btnObjetos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnObjetos"
        app:layout_constraintTop_toTopOf="@+id/btnObjetos" />

    <TextView
        android:id="@+id/txtAnimais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/animais"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/luckiest_guy"
        app:layout_constraintBottom_toBottomOf="@+id/btnAnimais"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAnimais"
        app:layout_constraintTop_toTopOf="@+id/btnAnimais" />

    <TextView
        android:id="@+id/txtFrutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/frutas"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/luckiest_guy"
        app:layout_constraintBottom_toBottomOf="@+id/btnFrutas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnFrutas"
        app:layout_constraintTop_toTopOf="@+id/btnFrutas" />

    <TextView
        android:id="@+id/txtPaises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClick"
        android:text="@string/paises"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:fontFamily="@font/luckiest_guy"
        app:layout_constraintBottom_toBottomOf="@+id/btnPaises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPaises"
        app:layout_constraintTop_toTopOf="@+id/btnPaises" />

    <TextView
        android:id="@+id/txtTemas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/temas"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:fontFamily="@font/luckiest_guy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnMenuInicial"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_tela_temas"
        android:contentDescription="@string/menu_inicial"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>